<resources>
    <string name="app_name">Personal Schechuler</string>
    <string name="enter_phone_number">Enter Phone Number to Continue</string>
    <string name="phone_sample">+255xxxxxxxxx</string>
    <string name="next">next</string>
    <string name="by">BY</string>
    <string name="app_owner">Kalagala Kapunda</string>
    <string name="new_task">New Task</string>
    <string name="add_task_description">"create new task "</string>
    <string name="monday">Monday</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string-array name="days_of_a_week">
        <item name="monday">Monday</item>
        <item name="tuesday">Tuesday</item>
        <item name="wednesday">Wednesday</item>
        <item name="thursday">Thursday</item>
        <item name="friday">Friday</item>
        <item name="saturday">Saturday</item>
        <item name="sunday">Sunday</item>
    </string-array>
    <string-array name="repeat_mode">
        <item name="once">Once</item>
        <item name="daily">Daily</item>
        <item name="only_on">Only On</item>
    </string-array>
    <string-array name="alert_mode">
<!--        <item name="daily">Alarm</item>-->

        <item name="once">Notification</item>
        <item name="only_on">Silence</item>

    </string-array>
    <string-array name="days_of_week_short">
        <item name="monday_short">Mon</item>
        <item name="tuesday_short">Tue</item>
        <item name="wednesday_short">Wed</item>
        <item name="thursday_short">Thu</item>
        <item name="friday_short">Fri</item>
        <item name="saturday_short">Sat</item>
        <item name="sunday_short">Sun</item>
    </string-array>

       <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="to">TO</string>
    <string name="day">Day</string>
    <string name="repeat">Repeat</string>
    <string name="alert">Alert</string>
    <string name="add_task">Add Task</string>
    <string name="delete">Delete Task</string>
    <string name="no_task">You have no tasks this day</string>
    <string name="set_task_title">Set Task Title</string>
    <string name="no_task_title_message">Please add a task title</string>
    <string name="ok">Ok</string>
    <string name="set_task_start_time">Set Task start time</string>
    <string name="no_start_time_message">Task can not be created without a start time</string>
    <string name="set_task_end_time">Set Task End Time</string>
    <string name="no_end_time_message">Task can not be created without an ending time</string>
    <string name="task_end_time_can_not_be_same">Invalid end time</string>
    <string name="same_end_time_message">Task end time can not be the same as task start time</string>
    <string name="invalid_time">Invalid Time</string>
    <string name="task_end_time_before_start">Task end time can not be before start time</string>
    <string name="empty_date">Please specify date</string>
    <string name="empty_date_message">Tasks occuring once needs a specific date</string>
    <string name="task_create_successfully">Task Created successfully</string>
    <string name="start_time_not_available">Start Time not Available</string>
    <string name="task_available_at_specified_time">A task with title %s already exist in the time frame you\'ve specified</string>
    <string name="task_end_time_not_available">Task End time not available</string>
    <string name="task_end_time_available_at_specified_time">the end time you specified is conflicting with time frame of task with title %s%</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="date_in_the_past">The Date you entered for the task is in the past </string>
    <string name="processing">Processing...</string>
    <string name="save_changes">Save Changes</string>
    <string name="task_deleted_successfully">Task Deleted Successfully</string>
    <string name="delete_title">Delete Task</string>
    <string name="delete_task_message">You are about to delete a task, this action is irriversible. Are you sure you want to continue</string>
    <string name="task_updated_successfully">Task Updated Successfully</string>
    <string name="time_frame_not_availbale">Time Frame Not Available</string>
    <string name="there_is_task_between">There is a task called %s in between start and end time of the task you are trying to create</string>
</resources>