<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/by"
                style="@style/level_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/by"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/app_owner"
                style="@style/level_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_owner"
                android:textSize="24sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>